@@ -1,6 +1,10 @@
 New in v1.3.1 (????/??/??)
 ---------------------------
 
+Fix typo in robust.py which broke error reporting. Closes Savannah bug #25255.
+
+Ignore Windows errors caused by too long filenames; the files are not yet
+backed-up, but the backup process is no longer halted. (Andrew Ferguson)
 
 
 New in v1.3.0 (2009/01/03)
